{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "a9161a51-298b-412b-ac35-f5b44fa8298f",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "3f515f65-0bc0-4cc4-9a52-8532b4ea1b3a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "96c79543-b013-4759-97f8-1a11d3e53708",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "43409626-3660-4fc0-8ae8-5a14dcc94fdb",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "eaa4c8e5-0ace-458b-9fac-dfaf6ac8482b",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "54a1af41-dece-44ee-985b-873f83c0ca13",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f49eeca1-3a32-4f2d-8d50-326f90f1ff2c",
                    "path": "<TouchscreenGestureInputController>/tapStartPosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}